--- a/countdown/style.css
+++ b/countdown/style.css
@@ -8,4 +8,6 @@ body {
     background-size: cover;
     background-attachment: fixed;
     background-position: center center;
+    min-height: 100vh;
+    margin: 0%;
 }
