--- a/countdown/style.css
+++ b/countdown/style.css
@@ -5,9 +5,41 @@
 
 body {
     background-image: url("./halloween.jpg");
-    background-size: cover;
     background-attachment: fixed;
     background-position: center center;
+    background-size: cover;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     min-height: 100vh;
-    margin: 0%;
+    margin: 0 23%;
+}
+
+h1 {
+    font-weight: bold;
+    font-size: 4.5rem;
+    margin-left: 13%;
+
+
+}
+
+.big-text {
+    font-size: 3rem;
+    font-weight: 600;
+    margin: 0 4rem;
+}
+
+.countdown-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.countdown-el {
+    text-align: center;
+}
+
+.countdown-el span {
+    font-size: 1.5rem;
+    font-weight: 300;
 }
